@@ -1,10 +1,10 @@
 include ../packages.mk
 
-BINUTILS_VERSION=2.20.1
+BINUTILS_VERSION=2.21
 MINGWRT_VERSION=3.18
-W32API_DIR_VERSION=3.15
-W32API_VERSION=$(W32API_DIR_VERSION)-1
-GCC_VERSION=4.5.1
+W32API_DIR_VERSION=3.17
+W32API_VERSION=$(W32API_DIR_VERSION)-2
+GCC_VERSION=4.6.0
 
 TARGET=i586-mingw32msvc
 PROGRAM_PREFIX=i586-mingw32msvc-
